// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Ghost merges style prop on top of inline styling options when there is a partial style object 1`] = `
<span
  class="bdl-Ghost bdl-Ghost--isAnimated"
  style="height:20px;width:100px;border-radius:2px"
/>
`;

exports[`components/Ghost merges style prop on top of inline styling options when there is a style object with all options 1`] = `
<span
  class="bdl-Ghost bdl-Ghost--isAnimated"
  style="height:20px;width:10px;border-radius:100%"
/>
`;

exports[`components/Ghost merges style prop on top of inline styling options when there is no style prop 1`] = `
<span
  class="bdl-Ghost bdl-Ghost--isAnimated"
  style="height:100px;width:100px;border-radius:2px"
/>
`;

exports[`components/Ghost merges style prop on top of inline styling options when there is partial options and styles 1`] = `
<span
  class="bdl-Ghost bdl-Ghost--isAnimated"
  style="height:20px;width:10px"
/>
`;
